--- a/8_3.html
+++ b/8_3.html
@@ -1131,7 +1131,7 @@
         // chữ của thư bạn muốn gửi
         let indexTextContent = 0;
         let textLetterContent = document.querySelector('.contentLetter');
-        const textLetterP = "Hôm nay là Trung Thu . Xin gửi lời chúc tới cậu ( Thu Phương). Chúc cậu luôn vui vẻ, luôn may mắn trong cuộc sống, ngày càng xinh đẹp. Xin gửi tất cả lời chúc tốt đẹp đến với cậu. Love You💗";
+        const textLetterP = " Trung thu  Chúc cậu (Thu Phương )luôn vui vẻ, luôn may mắn trong cuộc sống, ngày càng xinh đẹp. Xin gửi tất cả lời chúc tốt đẹp đến với cậu ( này là ai nói k phải tao:)). Love You💗";
         let timoutTextLetterContent;
         function textCharLetterContent() {
             if (indexTextContent < textLetterP.length) {
